rgw/lua: don't create the script manager per request

Fixes: https://tracker.ceph.com/issues/53810

Signed-off-by: yuval Lifshitz <ylifshit@redhat.com>