src/rgw/rgw_lua_background.cc
@@ -1,3 +1,4 @@
+#include "rgw_sal_rados.h"
 #include "rgw_lua_background.h"
 #include "rgw_lua.h"
 #include "rgw_lua_utils.h"
@@ -15,7 +16,7 @@ Background::Background(rgw::sal::Store* store,
       int execute_interval) :
     execute_interval(execute_interval),
     dp(cct, dout_subsys, "lua background: "),
-    store(store),
+    lua_script_manager(store->get_lua_script_manager()),
     cct(cct),
     luarocks_path(luarocks_path) {}
 
@@ -49,8 +50,8 @@ void Background::pause() {
   cond.notify_all();
 }
 
-void Background::resume(rgw::sal::Store* _store) {
-  store = _store;
+void Background::resume(rgw::sal::Store* store) {
+  lua_script_manager = store->get_lua_script_manager();
   paused = false;
   cond.notify_all();
 }
@@ -61,7 +62,7 @@ int Background::read_script() {
     return -EAGAIN;
   }
   std::string tenant;
-  return rgw::lua::read_script(&dp, store, tenant, null_yield, rgw::lua::context::background, rgw_script);
+  return rgw::lua::read_script(&dp, lua_script_manager.get(), tenant, null_yield, rgw::lua::context::background, rgw_script);
 }
 
 const std::string Background::empty_table_value;
