src/test/rgw/test_rgw_lua.cc
@@ -593,6 +593,9 @@ TEST(TestRGWLua, NotAllowedInLib)
   ASSERT_NE(rc, 0);
 }
 
+#define MAKE_STORE auto store = std::unique_ptr<sal::RadosStore>(new sal::RadosStore); \
+                        store->setRados(new RGWRados);
+
 TEST(TestRGWLua, OpsLog)
 {
   const std::string script = R"(
@@ -604,8 +607,7 @@ TEST(TestRGWLua, OpsLog)
 		end
   )";
 
-  auto store = std::unique_ptr<sal::RadosStore>(new sal::RadosStore);
-  store->setRados(new RGWRados);
+  MAKE_STORE;
 
   struct MockOpsLogSink : OpsLogSink {
     bool logged = false;
@@ -647,6 +649,7 @@ TEST(TestRGWLua, OpsLog)
 
 class TestBackground : public rgw::lua::Background {
   const unsigned read_time;
+
 protected:
   int read_script() override {
     // don't read the object from the store
@@ -655,8 +658,8 @@ protected:
   }
 
 public:
-  TestBackground(const std::string& script, unsigned read_time = 0) : 
-    rgw::lua::Background(nullptr, g_cct, "", 1 /*run every second*/),
+  TestBackground(sal::RadosStore* store, const std::string& script, unsigned read_time = 0) : 
+    rgw::lua::Background(store, g_cct, "", /* luarocks path */ 1 /* run every second */),
     read_time(read_time) {
       // the script is passed in the constructor
       rgw_script = script;
@@ -669,13 +672,14 @@ public:
 
 TEST(TestRGWLuaBackground, Start)
 {
+  MAKE_STORE;
   {
     // ctr and dtor without running
-    TestBackground lua_background("");
+    TestBackground lua_background(store.get(), "");
   }
   {
     // ctr and dtor with running
-    TestBackground lua_background("");
+    TestBackground lua_background(store.get(), "");
     lua_background.start();
   }
 }
@@ -691,7 +695,8 @@ TEST(TestRGWLuaBackground, Script)
     RGW[key] = value
   )";
 
-  TestBackground lua_background(script);
+  MAKE_STORE;
+  TestBackground lua_background(store.get(), script);
   lua_background.start();
   std::this_thread::sleep_for(wait_time);
   EXPECT_EQ(lua_background.get_table_value("hello"), "world");
@@ -705,7 +710,8 @@ TEST(TestRGWLuaBackground, RequestScript)
     RGW[key] = value
   )";
 
-  TestBackground lua_background(background_script);
+  MAKE_STORE;
+  TestBackground lua_background(store.get(), background_script);
   lua_background.start();
   std::this_thread::sleep_for(wait_time);
 
@@ -724,7 +730,7 @@ TEST(TestRGWLuaBackground, RequestScript)
   ASSERT_EQ(rc, 0);
   EXPECT_EQ(lua_background.get_table_value("hello"), "from request");
   // now we resume and let the background set the value
-  lua_background.resume(nullptr);
+  lua_background.resume(store.get());
   std::this_thread::sleep_for(wait_time);
   EXPECT_EQ(lua_background.get_table_value("hello"), "from background");
 }
@@ -741,7 +747,8 @@ TEST(TestRGWLuaBackground, Pause)
     end
   )";
 
-  TestBackground lua_background(script);
+  MAKE_STORE;
+  TestBackground lua_background(store.get(), script);
   lua_background.start();
   std::this_thread::sleep_for(wait_time);
   const auto value_len = lua_background.get_table_value("hello").size();
@@ -765,8 +772,9 @@ TEST(TestRGWLuaBackground, PauseWhileReading)
     end
   )";
 
+  MAKE_STORE;
   constexpr auto long_wait_time = std::chrono::seconds(6);
-  TestBackground lua_background(script, 2);
+  TestBackground lua_background(store.get(), script, 2);
   lua_background.start();
   std::this_thread::sleep_for(long_wait_time);
   const auto value_len = lua_background.get_table_value("hello").size();
@@ -785,12 +793,13 @@ TEST(TestRGWLuaBackground, ReadWhilePaused)
     RGW[key] = value
   )";
 
-  TestBackground lua_background(script);
+  MAKE_STORE;
+  TestBackground lua_background(store.get(), script);
   lua_background.pause();
   lua_background.start();
   std::this_thread::sleep_for(wait_time);
   EXPECT_EQ(lua_background.get_table_value("hello"), "");
-  lua_background.resume(nullptr);
+  lua_background.resume(store.get());
   std::this_thread::sleep_for(wait_time);
   EXPECT_EQ(lua_background.get_table_value("hello"), "world");
 }
@@ -807,7 +816,8 @@ TEST(TestRGWLuaBackground, PauseResume)
     end
   )";
 
-  TestBackground lua_background(script);
+  MAKE_STORE;
+  TestBackground lua_background(store.get(), script);
   lua_background.start();
   std::this_thread::sleep_for(wait_time);
   const auto value_len = lua_background.get_table_value("hello").size();
@@ -816,7 +826,7 @@ TEST(TestRGWLuaBackground, PauseResume)
   std::this_thread::sleep_for(wait_time);
   // no change in len
   EXPECT_EQ(value_len, lua_background.get_table_value("hello").size());
-  lua_background.resume(nullptr);
+  lua_background.resume(store.get());
   std::this_thread::sleep_for(wait_time);
   // should be a change in len
   EXPECT_GT(lua_background.get_table_value("hello").size(), value_len);
@@ -834,7 +844,8 @@ TEST(TestRGWLuaBackground, MultipleStarts)
     end
   )";
 
-  TestBackground lua_background(script);
+  MAKE_STORE;
+  TestBackground lua_background(store.get(), script);
   lua_background.start();
   std::this_thread::sleep_for(wait_time);
   const auto value_len = lua_background.get_table_value("hello").size();
